# rde

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  pull-request.md
apps/rde-settings/: README.md  pubspec.yaml
apps/rde-settings/docs/: navigation.md
apps/rde-settings/lib/: main.dart
apps/rde-settings/lib/core/data/datasource/network_manager/: nm_80211_constant.dart  nm_capabilities.dart  nm_device.dart  nm_device_state_reasons.dart  nm_device_types.dart  nm_states_constant.dart
apps/rde-settings/lib/core/dbus/: dbus.dart
apps/rde-settings/lib/core/errors/: rde_error.dart
apps/rde-settings/lib/core/navigation/: router.dart
apps/rde-settings/lib/core/theme/bloc/: app_theme_bloc.dart  app_theme_event.dart  app_theme_state.dart
apps/rde-settings/lib/core/widgets/: navigation_sidebar.dart
apps/rde-settings/lib/features/about_rde/domain/entities/: about_rde_settings.dart
apps/rde-settings/lib/features/about_rde/domain/repositories/: about_rde_repository.dart
apps/rde-settings/lib/features/about_rde/domain/use_cases/: get_about_rde_settings.dart  save_about_rde_settings.dart
apps/rde-settings/lib/features/about_rde/presentation/bloc/: about_rde_bloc.dart  about_rde_event.dart  about_rde_state.dart
apps/rde-settings/lib/features/about_rde/presentation/pages/: about_rde_page.dart
apps/rde-settings/lib/features/audio_io/domain/entities/: audio_io_settings.dart
apps/rde-settings/lib/features/audio_io/domain/repositories/: audio_io_repository.dart
apps/rde-settings/lib/features/audio_io/domain/use_cases/: get_audio_io_settings.dart  save_audio_io_settings.dart
apps/rde-settings/lib/features/audio_io/presentation/pages/: audio_io_page.dart
apps/rde-settings/lib/features/battery_health/domain/entities/: battery_health_settings.dart
apps/rde-settings/lib/features/battery_health/domain/repositories/: battery_health_repository.dart
apps/rde-settings/lib/features/battery_health/domain/use_cases/: get_battery_health_settings.dart  save_battery_health_settings.dart
apps/rde-settings/lib/features/battery_health/presentation/bloc/: battery_health_bloc.dart  battery_health_event.dart  battery_health_state.dart
apps/rde-settings/lib/features/battery_health/presentation/pages/: battery_health_page.dart
apps/rde-settings/lib/features/bluetooth/domain/entities/: bluetooth_settings.dart
apps/rde-settings/lib/features/bluetooth/domain/repositories/: bluetooth_repository.dart
apps/rde-settings/lib/features/bluetooth/domain/use_cases/: get_bluetooth_settings.dart  save_bluetooth_settings.dart
apps/rde-settings/lib/features/bluetooth/presentation/pages/: bluetooth_page.dart
apps/rde-settings/lib/features/daemons/domain/entities/: daemons_settings.dart
apps/rde-settings/lib/features/daemons/domain/repositories/: daemons_repository.dart
apps/rde-settings/lib/features/daemons/domain/use_cases/: get_daemons_settings.dart  save_daemons_settings.dart
apps/rde-settings/linux/: CMakeLists.txt
apps/rde-settings/linux/runner/: my_application.cc
apps/rde-settings/test/: widget_test.dart
apps/rde-settings/test/core/errors/: failure_test.dart
apps/rde-settings/test/features/wifi/data/: network_manager_proxy_test.dart
assets/config/: rde.toml.example
assets/polkit/: org.rde.brightness.policy  org.rde.wifi.rules
assets/systemd/: rde-wifi.service
cli/rde-cli/: Cargo.toml
crates/rde-config/: Cargo.toml
crates/rde-core/: Cargo.toml
crates/rde-core/src/: lib.rs
crates/rde-core/src/constants/: mod.rs  rde.rs
crates/rde-core/src/errors/: ipc.rs  mod.rs
crates/rde-core/src/fs/: mod.rs
crates/rde-core/src/logger/: mod.rs
crates/rde-core/src/utils/: ipc.rs  logger.rs  mod.rs
crates/rde-ipc/: Cargo.toml
crates/rde-ipc/src/: message.rs  socket.rs
crates/rde-ipc/src/message/: error.rs  event.rs  mod.rs  protocol.rs  request.rs  response.rs  types.rs
docs/: architecture.md  dbus-api.md  ipc-protocol.md  packaging.md
scripts/install/: rde-daemon.sh  rde-wifi.sh  rde_brightness.sh
services/brightness/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md
services/brightness/src/: brightness.rs  constants.rs  lib.rs  main.rs
services/brightness/tests/: brightness_test.rs
services/rde-brightness/: Cargo.toml  README.md
services/rde-brightness/src/: backend.rs  constants.rs  lib.rs  main.rs
services/rde-brightness/src/app/: mod.rs
services/rde-brightness/src/app/handler/: mod.rs  request.rs  response.rs
services/rde-brightness/src/dbus/: iface.rs
services/rde-daemon/: Cargo.toml
services/rde-daemon/src/: lib.rs  main.rs
services/rde-daemon/src/app/: mod.rs
services/rde-daemon/src/handler/: request.rs  response.rs
services/rde-daemon/src/ipc/: server.rs
services/rde-notification/: Cargo.toml  README.md
services/rde-theme/: Cargo.toml  README.md
services/rde-theme/src/: ARCHITECTURE.md  lib.rs
services/rde-volume/: Cargo.toml  README.md
services/rde-volume/src/: backend.rs
services/rde-wifi/: Cargo.toml  README.md
services/rde-wifi/src/: backend.rs  lib.rs  main.rs
services/rde-wifi/src/app/: mod.rs  run.rs  shutdown.rs
services/rde-wifi/src/backend/: connection.rs  device.rs  mod.rs  tests.rs
services/rde-wifi/src/dbus/: iface.rs  mod.rs
services/rde-wifi/src/domain/: mod.rs  models.rs  nm_models.rs
services/rde-wifi/src/infra/: mod.rs
services/rde-wifi/src/infra/dbus/: mock.rs  mod.rs  nm_proxy.rs
services/rde-wifi/src/ipc/: daemon_request.rs  daemon_response.rs  handler.rs  mod.rs
services/theme/: Cargo.toml  DOCUMENTATION.md  README.md
services/theme/src/: constants.rs  dbus.rs  defaults.rs  lib.rs  main.rs  models.rs  theme.rs  utils.rs
services/theme/tests/: theme_test.rs  utils_test.rs
services/volume/: Cargo.toml
services/volume/src/: constants.rs  lib.rs  main.rs  volume.rs
src/: lib.rs  main.rs
src/ipc/server/: handler.rs  mod.rs
src/ipc/transport/: error.rs  request.rs  response.rs
src/services/: brightness.rs
(+110 files in other folders)
