[package]
name = "rde"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = "2.0.18"
tokio = { workspace = true }
zbus.workspace = true


[workspace]
members = ["core","services/brightness", "services/notification", "services/theme", "services/volume"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Riju Mondal <rijum8906@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27.0"
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
zbus = "5.16"

[[bin]]
name = "rde"
path = "src/main.rs"
