[workspace]
resolver = "2"
members = ["cli/rde-cli",
    "crates/rde-config",
    "crates/rde-core", "crates/rde-ipc",
    "services/rde-brightness",
    "services/rde-daemon", "services/rde-notification", "services/rde-theme", "services/rde-volume",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RIju Mondal <rijum8906@gmail.com>"]
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
# Internal Crates
rde-config = { path = "crates/rde-config" }
rde-core = { path = "crates/rde-core" }
rde-ipc = { path = "crates/rde-ipc" }

# Async & Concurrency
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }

# IPC and Serialization
zbus = "5.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Error
anyhow = "1.0.103"
thiserror = "2.0.18"
