[package]
name = "rde-core"
version = "0.1.0"
edition = "2024"

[dependencies]
zbus = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = "0.2.186"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
