[package]
name = "rde-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rde-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "6.0.0"
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
