[package]
name = "rde-brightness"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }

[[bin]]
name = "rde-brightness-helper"
path = "src/bin/helper.rs"

[[bin]]
name = "rde-brightness"
path = "src/main.rs"
