[package]
name = "rde-brightness"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zbus = { workspace = true, features = ["tokio"] }

[[bin]]
name = "rde-brightness-helper"
path = "src/bin/helper.rs"

[[bin]]
name = "rde-brightness"
path = "src/main.rs"
