[package]
name = "rde-brightness"
version = "0.1.0"
edition = "2024"

[dependencies]
rde-core = { path = "../../crates/rde-core" }
rde-ipc = { path = "../../crates/rde-ipc" }

zbus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
path = "src/bin/rde-brightness-helper.rs"
name = "rde-brightness-helper"
