[package]
name = "rde-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rde-ipc = { workspace = true }
rde-core = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
