[package]
name = "rde-volume"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
alsa = "0.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true, features = ["tokio"] }

[[bin]]
name = "rde-volume"
path = "src/main.rs"
